# ai_mime

./: .gitignore  .gitmodules  AppIcon.icns  README.md  pyproject.toml  user_config.example.yml  user_config.yml
AppIcon.appiconset/: Contents.json
docs/: CNAME  architecture.md  developer-guide.md  examples.html  index.html  landing.css  manifest.jsonl  reflect_design.md  replay_design.md  schema.json  screenshot_event_design.md
hooks/: hook-ai_mime.py
scripts/: _create_icns.py  build.sh  build_win.ps1  create_icns.sh  entitlements.plist  pyinstaller.spec
src/ai_mime/: __init__.py  app.py  app_data.py  cli.py  codex_support.py  computer_server_custom.py  credentials_store.py  debug_log.py  litellm_client.py  mcp_server.py  onboarding.py  os_executor.py  permissions.py  platform.py  provider_settings.py  qwen_grounding.py  replay.py  screenshot.py  skill_links.py  user_config.py
src/ai_mime/agent_runner/: __init__.py  base_chat.py  bash_safety.py  chat.py  computer_use.py  mcp.py  models.py  runner.py  skill_build_chat.py
src/ai_mime/agent_runner/adapters/: __init__.py  base.py  claude_sdk.py  codex_cli.py  (+1 more)
src/ai_mime/editor/: __init__.py  mcp_installer.py  server.py
src/ai_mime/overlay/: __init__.py  automation_overlay_html.py  conversation_overlay.py  overlay_html.py  ui_common.py
src/ai_mime/record/: app.py  audio.py  capture.py  overlay_ui.py  recorder_process.py  screenshot.py  storage.py
src/ai_mime/reflect/: __init__.py  runner.py  schema_compiler.py  schema_utils.py  workflow.py
src/ai_mime/replay/: __init__.py  catalog.py  engine.py  grounding.py  os_executor.py  overlay_ui.py
src/ai_mime/schema/: __init__.py
tests/: test_agent_runner.py  test_agent_ui_static.py  test_app_data.py  test_cli.py  test_computer_server_custom.py  test_llm_resolver.py  test_onboarding.py  test_packaging.py  test_pass_c_optimizer.py  test_platform.py  test_replay_ui_static.py  test_skill_build_chat.py  test_skill_run_stream.py  test_task_dashboard.py
(+37 files in other folders)
