[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-mime"
version = "0.1.0"
description = "Record, Reflect, and Replay workflows on macOS"
authors = [
    {name = "Prakhar Jain", email = "prakharjain1114@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rumps>=0.4.0",
    "pynput>=1.7.6",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "pyobjc-framework-ApplicationServices>=9.0",
    "pyobjc-framework-Cocoa>=9.0",
    "numpy>=1.20.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.0.0",
    "litellm>=1.57.0",
    "instructor[litellm]>=1.14.3",
    "setuptools",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "lmnr[all]"
]

[project.scripts]
start_app = "ai_mime.cli:start_app"
reflect = "ai_mime.cli:reflect"

[tool.setuptools.package-data]
"ai_mime.editor.web" = ["*.html", "*.js", "*.css"]
